feat: add notes CRUD example
